[gd_scene load_steps=6 format=3 uid="uid://beek4k4dgldo3"]

[ext_resource type="PackedScene" uid="uid://di5rl8qlxctbd" path="res://scenes/unit.tscn" id="1_glp5s"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_gvx20"]
[ext_resource type="Texture2D" uid="uid://6s6i4laudgdr" path="res://assets/tilesheets/towerDefense_tilesheet@2.png" id="3_4vmpk"]
[ext_resource type="PackedScene" uid="uid://h57e5o142ttl" path="res://scenes/tilesheet_sprite.tscn" id="4_7x2au"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b6xve"]
radius = 61.31

[node name="PlayerTank" groups=["player"] instance=ExtResource("1_glp5s")]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 25
script = ExtResource("2_gvx20")
muzzle_flash_delay = 0.2
projectile_spawn_distance = 50
show_movement_line = false
rotation_speed = 5.0
move_speed = 300
attack_delay = 0.25

[node name="Hitbox" type="CollisionShape2D" parent="." index="0"]
position = Vector2(3.03033, 0)
shape = SubResource("CircleShape2D_b6xve")

[node name="BodySprite" parent="." index="2"]
region_rect = Rect2(2048, 1408, 128, 128)

[node name="TurretSprite" type="Sprite2D" parent="." index="3"]
texture = ExtResource("3_4vmpk")
region_enabled = true
region_rect = Rect2(2048, 1536, 128, 128)

[node name="MuzzleFlashSprite" parent="TurretSprite" index="0" instance=ExtResource("4_7x2au")]
visible = false
z_index = 10
position = Vector2(92, -4)
rotation = 1.5708
region_rect = Rect2(2816, 1536, 128, 128)

[node name="HealthComponent" parent="." index="5"]
MAX_HEALTH = 150.0

[node name="MuzzleFlashTimer" type="Timer" parent="." index="10"]
